<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="@dimen/dimen_2"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/filter_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_options"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/close_filter"
            android:layout_width="wrap_content"
            android:padding="@dimen/dimen_2"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/finish_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_2"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/selectDateTxtInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/select_dates"
            android:padding="@dimen/dimen_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/select_launch_success_txt_input"
            app:layout_constraintTop_toBottomOf="@id/close_filter">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/select_date_txt_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="false"
                android:longClickable="false"
                tools:ignore="KeyboardInaccessibleWidget" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/select_launch_success_txt_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:padding="@dimen/dimen_2"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/selectDateTxtInput"
            app:layout_constraintTop_toTopOf="@id/selectDateTxtInput"
            android:hint="@string/select_success"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/select_success_txt_edit"
                android:layout_width="match_parent"
                android:longClickable="false"
                android:focusable="false"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/select_order_txt_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:padding="@dimen/dimen_2"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/selectDateTxtInput"
            android:hint="@string/order_by">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/select_order_txt_edit"
                android:layout_width="match_parent"
                android:longClickable="false"
                android:focusable="false"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>